--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 
 /* Banner Section Styles */
 .banner-container{
-    background-image: url("/images/banner/banner1.png");
+    background-image: url("./images/banner/banner1.png");
     background-repeat: no-repeat;
     height: 900px;
     background-size: cover;
