--- a/style.css
+++ b/style.css
@@ -97,46 +97,6 @@
     font-size: 25px;
     font-weight: 500;
 }
-/* .my-plans-banner{
-    margin-top: 50px;
-    background-image: url(/images/watch.png);
-    background-repeat: repeat;
-    background-size: cover;
-    width: 1140px;
-    height: 300px;
-    margin-left: 381.5px;
-
-
-    margin-top: 50px;
-    background-image: url(/images/gradient1.png);
-    background-repeat: repeat;
-    background-size: cover;
-    width: 1140px;
-    height: 300px;
-    margin-left: 381.5px;
-    z-index: 1;
-}
-
-.my-plans-banner .section-title{
-    padding: 59px 617px 0 64px;
-    text-align: left;
-    color: #FFF;
-    font-size: 40px;
-    font-weight: 700;
-}
-.my-plans-banner button{
-    margin-left: 64px;
-    padding: 21px 36px 20px 36px;
-    border: none;
-    border-radius: 5px;
-    background: #FFF;
-    color: #F15B22;
-    text-align: center;
-    font-size: 20px;
-    font-weight: 600;
-
-} */
-
 .my-plans-banner {
     position: relative;
     margin-top: 50px;
@@ -159,11 +119,11 @@
 }
 
 .my-plans-banner::before {
-    background-image: url('/images/watch.png');
+    background-image: url('./images/watch.png');
 }
 
 .my-plans-banner::after {
-    background-image: url('/images/gradient2.png');
+    background-image: url('./images/gradient2.png');
 }
 
 .my-plans-banner .section-title,
