--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,7 @@
 
 /* Banner Section Styles */
 .banner-container{
-    background-image: url("./images/banner/banner1.png");
+    background-image: url("/images/banner/banner1.png");
     background-repeat: no-repeat;
     height: 900px;
     background-size: cover;
@@ -98,7 +98,7 @@
     font-weight: 500;
 }
 .my-plans-banner{
-    background-image: url(./images/gradient1.png), url(./images/watch.png);
+    background-image: url(/images/gradient1.png), url(/images/watch.png);
     background-repeat: no-repeat;
     margin-top: 50px;
     width: 1140px;
