--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@
   .banner-container {
     background-image: none;
     width: 100%;
+    height: 200px;
   }
   .banner-contents {
     width: calc(100%-5%);
@@ -73,6 +74,7 @@
   .banner-container {
     background-image: none;
     width: 100%;
+    height: 200px;
   }
   .banner-contents {
     width: calc(100%-5%);
